--- a/.github/workflows/daily-post.yml
+++ b/.github/workflows/daily-post.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   
   # Автоматический запуск по расписанию (9:00 по Риге = 6:00 UTC)
-  #убрать слеш со следующих двух строчек и всё заработает 
+  #убрать решетки со следующих двух строчек и всё заработает 
   #schedule:
     #- cron: '0 6 * * *'
 
